--- a/SpaceRogueRevolution/Content/Site.css
+++ b/SpaceRogueRevolution/Content/Site.css
@@ -112,7 +112,7 @@ img {
 
 .menu {
     position: absolute;
-    top: 0px;
+    top: 100px;
     left: 500px;
     height: 50px;
 }
@@ -121,9 +121,10 @@ img {
     font-family: 'Comic Sans MS';
     font-size: 20pt;
     position: absolute;
-    top: 50px;
+    top: 0px;
     left: 500px;
-    height: 200px;
+    height: 100px;
+    width: 500px;
 }
 
 .serverprocessingdisplay {
