--- a/SpaceRogueRevolution/Content/Site.css
+++ b/SpaceRogueRevolution/Content/Site.css
@@ -112,12 +112,12 @@ img {
 
 .menu {
     position: absolute;
-    top: 300px;
-    left: 500px;
+    top: 650px;
+    left:10px;
     height: 50px;
-    z-index:12;
+    z-index: 12;
+    padding:10px;
 }
-
 .titleDiv {
     font-family: 'Comic Sans MS';
     font-size: 20pt;
@@ -139,14 +139,45 @@ img {
 
 .GameDiv {
     position: absolute;
-    top: 100px;
-    left: 500px;
+    top: 500px;
+    left: 0px;
     background-color: #000066;
     border:thick;
     border-color:white;
     color: white;
-    height: 300px;
+    height: 150px;
     width: 500px;
     font-size: 8pt;
     z-index: 0;
+}
+.HowToPlayDiv {
+   position: absolute;
+    top: 500px;
+    left: 0px;
+    background-color: #000066;
+    border:thick;
+    border-color:white;
+    color: white;
+    height: 150px;
+    width: 500px;
+    font-size: 8pt;
+    z-index:10;
+}
+.GameOverDiv {
+    background-color:darkblue;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 500px;
+    width: 500px;
+    z-index:13;
+}
+.IntroGameDiv {
+    background-color:white;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 700px;
+    width: 500px;
+    z-index:15;
 }
